# jornada_de_dados

./: README.md
airflow/: README.md  pyproject.toml
airflow/astro/: requirements.txt
airflow/astro/.astro/: test_dag_integrity_default.py
airflow/astro/dags/: api_to_db.py  duckdb_custom_operator.py  exemplo_dag.py
airflow/astro/include/: controller.py  models.py  schema.py
airflow/astro/include/custom_operators/: postgres_to_duckdb_operator.py
airflow/astro/tests/dags/: test_dag_example.py
airflow/src/: exemplo_00.py  exemplo_01.py  exemplo_02.py  exemplo_03.py
dbt/: README.md
docker/: Dockerfile  README.md  app.py  pyproject.toml
python/aula01_bootcamp/: README.md  desafio.py  exemplo_01.py  exemplo_02.py
python/aula02_bootcamp/: README.md  exercicios.py
python/aula03_bootcamp/: README.md  exercicios.py
python/aula04_bootcamp/: README.md  exercicios.py
python/aula05_bootcamp/: README.md
python/aula06_bootcamp/: .flake8  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
python/aula07_bootcamp/: README.md  etl.py  main.py  pyproject.toml  vendas.csv
python/aula08_bootcamp/: README.md  etl.py  pipeline.py  pyproject.toml
python/aula09_bootcamp/: .pre-commit-config.yaml  README.md  etl.py  pyproject.toml  utils_log.py
python/aula10_bootcamp/: README.md
python/aula11_bootcamp/: README.md
python/aula12_bootcamp/: README.md  pyproject.toml  script_exemplo.py
python/aula12_bootcamp/src/interface/classes/: csv_class.py
python/aula13_bootcamp/: README.md  pyproject.toml
python/aula13_bootcamp/data/json_files/: 1.json  2.json
python/aula13_bootcamp/data/txt_files/: 2.txt
python/aula13_bootcamp/src/lib/classes/: CsvSource.py  FilesSources.py  JsonSource.py  TxtSource.py
python/aula15_bootcamp/: README.md  pyproject.toml
python/aula15_bootcamp/data/: products.csv
python/aula15_bootcamp/src/FakeAPI/: start.py
python/aula15_bootcamp/src/lib/: main.py
python/aula15_bootcamp/src/lib/contracts/: schema.py
python/aula15_bootcamp/src/lib/tools/: retry.py
python/aula16_bootcamp/: README.md  main.py  pyproject.toml
python/aula17_bootcamp/: README.md  desafio.db  desafio.py  exemplo01.py  pyproject.toml  test.db
python/aula18_bootcamp/: README.md  pokemon.db  pyproject.toml
python/aula18_bootcamp/src/: controller.py  main.py  model.py  schema.py
python/aula19_bootcamp/: README.md  pyproject.toml  test.db
python/aula19_bootcamp/src/: database.py  main.py  models.py
python/aula20_bootcamp/: README.md  pyproject.toml
python/aula20_bootcamp/backend/: crud.py  database.py  main.py  models.py  requirements.txt  router.py  schemas.py
python/aula20_bootcamp/frontend/: app.py
sql/aula01_bootcamp/: README.md
sql/aula02_bootcamp/: README.md  desafio.sql
sql/aula03_bootcamp/: README.md  desafio.sql
sql/aula04_bootcamp/: README.md  desafio.sql
sql/aula05_bootcamp/: README.md  desafio.sql  docker-compose.yml  northwind.sql
sql/aula06_bootcamp/: README.md  scripts.sql
sql/aula07_bootcamp/: README.md  scripts.sql
sql/aula08_bootcamp/: README.md  script.sql  sp_realizar_transacao.sql  sp_ver_extrato.sql
sql/aula09_bootcamp/: README.md
sql/aula09_bootcamp/exercicio_01/: script.sql  tables.sql  triggers.sql
sql/aula09_bootcamp/exercicio_02/: script.sql  tables.sql  triggers.sql
sql/aula10_bootcamp/: README.md
sql/aula11_bootcamp/: README.md
sql/aula12_bootcamp/: README.md  script.sql
sql/aula13_bootcamp/: README.md  script.sql
streamlit/: README.md  pyproject.toml
streamlit/data/: survey_data.csv
streamlit/exemplo/: dados.parquet  main.py  survey_data.csv
streamlit/projeto_coleta/: coleta_csv.py  coleta_sqlalchemy.py
streamlit/projeto_dash/: dash_postgres.py
streamlit/projeto_dash_realtime/data/: orders.parquet
streamlit/projeto_dash_realtime/src/: consumer.py  dashboard.py  producer.py
web_scraping/: pyproject.toml
web_scraping/aula01_bootcamp/data/: iphone 12.csv
web_scraping/aula01_bootcamp/src/: get_my_ip.py  ml_search.py
web_scraping/aula02_bootcamp/src/: pda_request.py
web_scraping/aula03_bootcamp/src/: s_cc_login.py
web_scraping/aula04_bootcamp/: README.md
