[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["Guilherme Moreira <devguilhermemoreira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
apache-airflow = "^2.10.2"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
