[tool.poetry]
name = "workshop_streamlit"
version = "0.1.0"
description = ""
authors = ["Guilherme Moreira <devguilhermemoreira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.0"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
