[tool.poetry]
name = "workshop_streamlit"
version = "0.1.0"
description = ""
authors = ["Guilherme Moreira <devguilhermemoreira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.0"
plotly = "^5.24.1"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
streamlit-folium = "^0.23.1"
wordcloud = "^1.9.4"
faker = "^30.10.0"
confluent-kafka = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
