[tool.poetry]
name = "web-scraping"
version = "0.1.0"
description = ""
authors = ["Guilherme Moreira <devguilhermemoreira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.3"
beautifulsoup4 = "^4.12.3"
mitmproxy = "^11.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
