[tool.poetry]
name = "aula16-bootcamp"
version = "0.1.0"
description = ""
authors = ["Guilherme Moreira <devguilhermemoreira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlmodel = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
